Second commit, details page and comments

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="pages/NewPost.html">Home</a></li>
+			<li><a href="#">Home</a></li>
 			<li><a href="#">New Post</a></li>
 			<li><a href="#">Google</a></li>
 			<li><a href="#">Mobiles</a></li>
@@ -30,7 +30,7 @@
 				<div id="principal">
 					<div class="picture" id="picturePost1">
 						<div class="titulo">
-							<p><a href="#">Hello World!!</a></p>
+							<p><a href="pages/NewPost.html">Hello World!!</a></p>
 						</div>
 						<div class="espacio"></div>
 					</div>
@@ -44,7 +44,7 @@
 				<div id="principal">
 					<div class="picture" id="picturePost2">
 						<div class="titulo">
-							<p><a href="#">Naturaleza</a></p>
+							<p><a href="pages/NewPost.html">Naturaleza</a></p>
 						</div>
 						<div class="espacio"></div>
 					</div>
@@ -58,7 +58,7 @@
 					<div id="principal">
 					<div class="picture" id="picturePost3">
 						<div class="titulo">
-							<p><a href="#">Programming</a></p>
+							<p><a href="pages/NewPost.html">Programming</a></p>
 						</div>
 						<div class="espacio"></div>
 					</div>
