--- a/pages/NewPost.html
+++ b/pages/NewPost.html
@@ -28,15 +28,28 @@
 	</nav>
 	<main>
 		<section id="content">
-			<div>
-				<div><h1>Title</h1></div>
-				<div></div>
-				<div></div>
+				<div id="TituloPost">
+					<p>Naturaleza</p>
+				</div>
+				<div id="contentLeft">
+					<img src="../img/f.jpg" width="370" height="100">
+				</div>
+				<div id="contentCenter">
+					<img src="../img/pajaro.jpg" width="260" height="100">
+				</div>
+				<div id="contentRight">
+					<img src="../img/pai.jpg" width="370" height="100">
+				</div>
+				<div id="contenidoWidth">
+					<p>La naturaleza, en su sentido más amplio, es equivalente al mundo natural, mundo material o universo material. El término hace referencia a los fenómenos del mundo físico, y también a la vida en general. Por lo general, no incluye los objetos artificiales ni la intervención humana, a menos que se la califique de manera que haga referencia a ello, por ejemplo con expresiones como «naturaleza humana» o «la totalidad de la naturaleza». La naturaleza también se encuentra diferenciada de lo sobrenatural. Se extiende desde el mundo subatómico al galáctico.
 
-			</div>
+					La palabra «naturaleza» procede del latín natura que significa «perteneciente o relativo a la naturaleza o conforme a la cualidad o propiedad de las cosas», «carácter natural».1​</p>
+				</div>
 		</section>
 		<section id="comments">
-			
+			<div style="background-color:rgba(0,0,0,0.4);">
+				<center><h2>Comments</h2></center>
+			</div>
 		</section>
 	</main>
 </body>
