Contenido agregado detalle post

--- a/pages/NewPost.html
+++ b/pages/NewPost.html
@@ -41,9 +41,20 @@
 					<img src="../img/pai.jpg" width="370" height="100">
 				</div>
 				<div id="contenidoWidth">
-					<p>La naturaleza, en su sentido más amplio, es equivalente al mundo natural, mundo material o universo material. El término hace referencia a los fenómenos del mundo físico, y también a la vida en general. Por lo general, no incluye los objetos artificiales ni la intervención humana, a menos que se la califique de manera que haga referencia a ello, por ejemplo con expresiones como «naturaleza humana» o «la totalidad de la naturaleza». La naturaleza también se encuentra diferenciada de lo sobrenatural. Se extiende desde el mundo subatómico al galáctico.
-
-					La palabra «naturaleza» procede del latín natura que significa «perteneciente o relativo a la naturaleza o conforme a la cualidad o propiedad de las cosas», «carácter natural».1​</p>
+					<!--Description the this post-->
+					<div class="detailMain">
+						<br/><center><h3>México</h3></center>
+						<p>México es un país con numerosos recursos naturales, tanto marinos como terrestres, y con numerosos lugares que visitar si es amante de la naturaleza. Desde el Eje Neovolcánico hasta la Península de Yucatán y la Reserva de la Biosfera de Sian Ka’an son varios los lugares que vale la pena visitar.</p>
+						<p>______________________________________<br/><center>By: <a href="#">Najera</a></center></p>
+					</div>
+					<div class="detailMain">
+						<iframe width="100%" height="260" src="https://www.youtube.com/embed/Dv6h-C3MgWg" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="detailMain">
+						<br/><center><h3>Venezuela</h3></center>
+						<p>Venezuela se encuentra en el extremo septentrional del continente suramericano, frente al Mar Caribe.  Por su localización en la franja tropical, presenta un clima con pequeñas variaciones de temperatura a lo largo del año y dos estaciones bien marcadas, que se diferencian por el nivel de precipitación.</p>
+						<p>______________________________________<br/><center>By: <a href="#">Mesias</a></center></p>
+					</div>
 				</div>
 		</section>
 		<section id="comments">
