Formulario para añadir nuevos post e hipervinculos para navegación.

--- a/pages/NewPost.html
+++ b/pages/NewPost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Post</title>
+	<title>Detils</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
 	<link rel="stylesheet" type="text/css" href="../css/detalles.css">
@@ -19,11 +19,11 @@
 		<nav>
 		<ul>
 			<li><a href="../Index.html">Home</a></li>
-			<li><a href="#">Notice</a></li>
-			<li><a href="#">Google</a></li>
-			<li><a href="#">Mobiles</a></li>
-			<li><a href="#">Options panel</a></li>
-			<li><a href="#">Acerca de</a></li>
+			<li><a href="form.html">Nuevo post</a></li>
+			<li><a href="https://www.google.com.mx">Google</a></li>
+			<li><a href="https://www.youtube.com">YouTube</a></li>
+			<li><a href="https://www.google.com.mx/maps">Google maps</a></li>
+			<li><a href="#" onclick="alert('Página hecha por el equipo 2!!!')">Acerca de</a></li>
 		</ul>
 	</nav>
 	<main>
