--- a/Index.html
+++ b/Index.html
@@ -16,12 +16,12 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">New Post</a></li>
-			<li><a href="#">Google</a></li>
-			<li><a href="#">Mobiles</a></li>
-			<li><a href="#">Options panel</a></li>
-			<li><a href="#">Acerca de</a></li>
+			<li><a href="Index.html">Home</a></li>
+			<li><a href="pages/form.html">New Post</a></li>
+			<li><a href="https://www.google.com.mx">Google</a></li>
+			<li><a href="https://www.youtube.com">YouTube</a></li>
+			<li><a href="https://www.google.com.mx/maps">Google maps</a></li>
+			<li><a href="#" onclick="alert('Página hecha por el equipo 2!!!')">Acerca de</a></li>
 		</ul>
 	</nav>
 	<main>
