--- a/pages/NewPost.html
+++ b/pages/NewPost.html
@@ -52,31 +52,24 @@
 					<div class="detailMain">
 						<br/><center><h3>México</h3></center>
 						<p>México es un país con numerosos recursos naturales, tanto marinos como terrestres, y con numerosos lugares que visitar si es amante de la naturaleza. Desde el Eje Neovolcánico hasta la Península de Yucatán y la Reserva de la Biosfera de Sian Ka’an son varios los lugares que vale la pena visitar.</p>
-						<p>______________________________________<br/><center>By: <a href="#">Najera</a></center></p>
+						<p>By: <a href="#">Najera</a></center></p>
 					</div>
 					<div class="detailMain">
 						<iframe width="100%" height="260" src="https://www.youtube.com/embed/Dv6h-C3MgWg" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="detailMain">
 						<br/><center><h3>Venezuela</h3></center>
-						<p>Venezuela se encuentra en el extremo septentrional del continente suramericano, frente al Mar Caribe.  Por su localización en la franja tropical, presenta un clima con pequeñas variaciones de temperatura a lo largo del año y dos estaciones bien marcadas, que se diferencian por el nivel de precipitación.</p>
-						<p>______________________________________<br/><center>By: <a href="#">Mesias</a></center></p>
+						<p>Venezuela se encuentra en el extremo septentrional del continente suramericano, frente al Mar Caribe.  Por su localización en la franja tendríamospical, presenta un clima con pequeñas variaciones de temperatura a lo largo del año y dos estaciones bien marcadas, que se diferencian por el nivel de precipitación.</p>
+						<p>By: <a href="#">Mesias</a></center></p>
 					</div>
 				</div>
 		</section>
 		<section id="comments">
-<<<<<<< HEAD
 			<div style="background-color:rgba(0,0,0,0.4);">
 				<center><h2>Comments</h2></center>
 			</div>
-=======
 			<!--Contenedor principal-->
-	<div class="comments-container">
-		<h1>Comentarios <a href="http://"></a></h1>
-		<br>
-		<br>
-		<br>
-
+	<div class="comments-container" style="background-color:whitesmoke;">
 		<ul id="comments-list" class="comments-list">
 			<li>
 				<div class="comment-main-leve">
@@ -210,7 +203,6 @@
 			</li>
 		</ul>
 	</div>
->>>>>>> e669c55171f95ec571ef8d9d7757adb71b69f4eb
 		</section>
 	</main>
 </body>
